[tool.poetry]
name = "accountmanager"
version = "0.1.0"
description = ""
authors = ["Ben"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.3"
python-environ = "^0.4.54"
pyinstaller = "^5.3"
Pillow = "^9.2.0"
PySide6 = "^6.3.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
