[tool.poetry]
name = "accountmanager"
version = "0.1.0"
description = ""
authors = ["Ben"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
macholib = "^1.16.2"
numpy = "^1.24.3"
pandas = "^2.0.2"
pyinstaller = "^5.12.0"
pyinstaller-hooks-contrib = "^2023.3"
PySide6 = "^6.5.1"
python-dateutil = "^2.8.2"
python-qt-live-coding = "^0.4.3"
pytz = "^2023.3"
QtPy = "^2.3.1"
six = "^1.16.0"
urllib3 = "^2.0.3"
xlrd = "^2.0.1"
python-environ = "^0.4.54"
altgraph = "^0.17.3"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
